# booklog

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .vale.ini  CLAUDE.md  Gemfile  README.md  booklog.rb  config.rb  config.yml  feed.xml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  sitemap.xml
authors/: a-jack-ulrich.json  adam-l-g-nevill.json  andrew-roberts.json  ann-m-sperber.yml  anne-rice.json  arnold-schwarzenegger.json  august-derleth.json  barbara-outland-baker.json  barbara-outland-baker.yml  bentley-little.json  brad-schoenfeld.json  bram-stoker.json  bret-easton-ellis.json  budd-schulberg.json  charlie-huston.json  charlie-huston.yml  chet-williamson.json  chris-lacher.json  chuck-palahniuk.json  clive-barker.json  clive-barker.yml  conner-habib.json  craig-spector.json  dashiell-hammett.json  dave-draper.json  david-goggins.json  david-h-hackworth.json  david-j-schow.json  david-mamet.json  david-miller.json  david-miller.yml  dennis-etchison.json  don-d-ammassa.json  don-dammassa.json  donna-tartt.json  edmund-jorgensen.json  edmund-morris.json  edward-lee.json  edward-lee.yml  eliot-weisman.json  (+121 more)
booklog/: api.py  app.rb  author.rb  book.rb  booklog.rb  convert_grade_to_number.rb  convert_grade_to_unicode_stars.rb  convert_int_to_roman.rb  create_author.rb  create_book.rb  create_feature.rb  create_page.rb  create_placeholder.rb  create_reading.rb  create_review.rb  feature.rb  logger.py  page.rb  parse_authors.rb  parse_books.rb  parse_features.rb  parse_pages.rb  parse_readings.rb  parse_reviews.rb  reading.rb  refactor.py  review.rb  slugize.rb
books/: allhallow-s-eve-by-richard-laymon.yml  arnold-and-me-in-the-shadow-of-the-austrian-oak-by-barbara-outland-baker.yml  beware-by-richard-laymon.yml  bogart-by-ann-m-sperber-and-eric-lax.yml  brain-wave-by-poul-anderson.yml  cary-grant-a-biography-by-marc-eliot.yml  caught-stealing-by-charlie-huston.yml  christine-by-stephen-king.yml  creepshow-by-stephen-king.yml  cujo-by-stephen-king.yml  danse-macabre-by-stephen-king.yml  dark-crusade-by-karl-edward-wagner.yml  dark-mountain-by-richard-laymon.yml  dark-mountain-by-richard-laymon2.yml  dawson-s-city-by-richard-laymon.yml  different-seasons-by-stephen-king.yml  firestarter-by-stephen-king.yml  frank-the-voice-by-james-kaplan.yml  how-to-write-short-word-craft-for-fast-times-by-roy-peter-clark.yml  life-the-rat-pack-the-original-bad-boys-by-james-kaplan.yml  mr-s-my-life-with-frank-sinatra-by-george-jacobs-and-william-stadiem.yml  night-shift-by-stephen-king.yml  night-show-by-richard-laymon.yml  nightmare-lake-by-richard-laymon.yml  on-writing-well-the-classic-guide-to-writing-nonfiction-by-william-zinsser.yml  out-are-the-lights-by-richard-laymon.yml  peter-cushing-a-life-in-film-by-david-miller.yml  rage-by-stephen-king.yml  rat-pack-confidential-frank-dean-sammy-peter-joey-and-the-last-great-show-biz-party-by-shawn-levy.yml  refugee-bio-of-a-space-tyrant-1-by-piers-anthony.yml  refugee-by-piers-anthony.yml  roadwork-by-stephen-king.yml  roger-ebert-s-movie-home-companion-1987-edition-by-roger-ebert.yml  roger-ebert-s-movie-home-companion-by-roger-ebert.yml  roger-ebert-s-movie-yearbook-2004-by-roger-ebert.yml  shootout-at-joe-s-by-richard-laymon.yml  sinatra-the-chairman-by-james-kaplan.yml  test-book-by-y-and-1976.yml  the-beast-house-by-richard-laymon.yml  the-big-sleep-by-raymond-chandler.yml  (+22 more)
coverage/: .last_run.json  .resultset.json  index.html
drafts/: 0001-the-shining-by-stephen-king.md  0002-rage-by-stephen-king.md  0003-night-shift-by-stephen-king.md  0004-dark-crusade-by-karl-edward-wagner.md  0005-cary-grant-a-biography-by-marc-eliot.md  0006-mr-s-my-life-with-frank-sinatra-by-george-jacobs-and-william-stadiem.md  0007-brain-wave-by-poul-anderson.md  0008-true-myths-the-life-and-times-of-arnold-schwarzenegger-by-nigel-andrews.md  0009-the-cellar-by-richard-laymon.md  0010-the-stand-by-stephen-king.md  (+12 more)
(+1676 files in other folders)
